# beanbag-trajectory

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: advanced_usage.py  basic_usage.py
src/cornhole_coach/: __init__.py  constants.py  optimizer.py  physics.py  visualizer.py
tests/: __init__.py  test_constants.py  test_optimizer.py  test_physics.py
